--- a/src/components/auth/Register.css
+++ b/src/components/auth/Register.css
@@ -1,4 +1,4 @@
-.login_card input {
+.register_card input {
     border: none;
     border-radius: 5px;
     min-width: 80%;
@@ -8,7 +8,7 @@
     text-align: center;
 }
 
-.login_card {
+.register_card {
     align-items: center;
     border: 2px solid whitesmoke;
     border-radius: 5%;
@@ -18,18 +18,21 @@
     margin-right: auto;
     min-width: fit-content;
     padding: 1%;
-    width: 20%;
+    width: 40%;
 }
 
 button {
     text-align: center;
-    width: 80px;
+    min-width: 60px;
 }
 
-.login_buttons {
-    column-gap: 5%;
+.register_buttons {
     display: flex;
     margin-left: 2%;
     margin-right: 2%;
+    margin-bottom: 2%;
+}
+
+.cancel_register {
     margin-bottom: 2%;
 }
