--- a/src/components/play/FindCourse.css
+++ b/src/components/play/FindCourse.css
@@ -1,4 +1,4 @@
-.find_course_container {
+/* .find_course_container {
     align-items: center;
     border: 2px solid whitesmoke;
     border-radius: 10px;
@@ -53,4 +53,4 @@
 
 #course_name {
     font-weight: bold;
-}
+} */
