finally done i think

--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -33,3 +33,8 @@ button {
     margin-right: 2%;
     margin-bottom: 2%;
 }
+
+.login_buttons button {
+    border: none;
+    border-radius: 5px;
+}
