--- a/src/components/auth/Register.css
+++ b/src/components/auth/Register.css
@@ -24,15 +24,20 @@
 .register_state_select {
     margin-top: 1%;
     margin-bottom: 2%;
+    border: none;
+    border-radius: 5px;
 }
 
 button {
     text-align: center;
     min-width: 60px;
+    border: none;
+    border-radius: 5px;
 }
 
 .register_buttons {
     display: flex;
+    column-gap: 2%;
     margin-left: 2%;
     margin-right: 2%;
     margin-bottom: 2%;
@@ -41,3 +46,4 @@ button {
 .cancel_register {
     margin-bottom: 2%;
 }
+
