--- a/src/components/courses/FavoriteCourse.css
+++ b/src/components/courses/FavoriteCourse.css
@@ -25,3 +25,9 @@
     border-radius: 5px;
     margin: 1%;
 }
+
+#add_course_button {
+  margin-bottom: 1%;
+  border: none;
+  border-radius: 5px;
+}
