--- a/src/components/play/Play.css
+++ b/src/components/play/Play.css
@@ -3,3 +3,9 @@
     border: none;
     border-radius: 5px;
   }
+
+  #add_course_button {
+    margin-bottom: 1%;
+    border: none;
+    border-radius: 5px;
+  }
