--- a/src/components/stats/Scores.css
+++ b/src/components/stats/Scores.css
@@ -34,6 +34,7 @@
 .completed_rounds_container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .round_result {
@@ -72,3 +73,9 @@ justify-content: space-evenly;
     min-width: 50px;
     margin-right: 5px;
 }
+
+#play_button {
+    margin-bottom: 1%;
+    border: none;
+    border-radius: 5px;
+  }
