--- a/src/components/stats/Scores.css
+++ b/src/components/stats/Scores.css
@@ -47,7 +47,7 @@ margin-left: 15%;
 margin-right: 15%;
 margin-top: 2%;
 margin-bottom: 2%;
-width: 280px;
+min-width: max-content;
 padding: 2%;
 }
 
